hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_shape_wrong_type.php
<?hh
function f(): void {
  $f = ($v ==> $v['a'] + 0);
  $f(shape('a' => "meow"));
}
